Port of Lemmy's implementation of SWRS ucode.

--- a/projects/msvc12/GLideN64.vcxproj
+++ b/projects/msvc12/GLideN64.vcxproj
@@ -288,6 +288,7 @@
     <ClCompile Include="..\..\src\F3DGOLDEN.cpp" />
     <ClCompile Include="..\..\src\F3DSETA.cpp" />
     <ClCompile Include="..\..\src\F3DBETA.cpp" />
+    <ClCompile Include="..\..\src\F3DSWRS.cpp" />
     <ClCompile Include="..\..\src\F3DTEXA.cpp" />
     <ClCompile Include="..\..\src\FrameBuffer.cpp" />
     <ClCompile Include="..\..\src\FrameBufferInfo.cpp" />
@@ -429,6 +430,7 @@
     <ClInclude Include="..\..\src\F3DEX2MM.h" />
     <ClInclude Include="..\..\src\F3DGOLDEN.h" />
     <ClInclude Include="..\..\src\F3DSETA.h" />
+    <ClInclude Include="..\..\src\F3DSWRS.h" />
     <ClInclude Include="..\..\src\F3DTEXA.h" />
     <ClInclude Include="..\..\src\FrameBuffer.h" />
     <ClInclude Include="..\..\src\FrameBufferInfo.h" />
