fix build errors

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -62,6 +62,7 @@ set(GLideN64_SOURCES
   Textures.cpp
   Turbo3D.cpp
   VI.cpp
+  VR_stub.cpp
   ZlutTexture.cpp
   ZSort.cpp
   BufferCopy/ColorBufferToRDRAM.cpp
