--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,6 +31,7 @@ set(GLideN64_SOURCES
   F3DEX2ACCLAIM.cpp
   F3DEX2CBFD.cpp
   F3DEX2MM.cpp
+  F3DFLX2.cpp
   F3DGOLDEN.cpp
   F3DSWRS.cpp
   F3DTEXA.cpp
