--- a/projects/msvc12/GLideN64.vcxproj
+++ b/projects/msvc12/GLideN64.vcxproj
@@ -285,16 +285,6 @@
     <ClCompile Include="..\..\src\DepthBufferRender\ClipPolygon.cpp" />
     <ClCompile Include="..\..\src\DepthBufferRender\DepthBufferRender.cpp" />
     <ClCompile Include="..\..\src\DisplayWindow.cpp" />
-    <ClCompile Include="..\..\src\F3DAM.cpp" />
-    <ClCompile Include="..\..\src\F3DEX2ACCLAIM.cpp" />
-    <ClCompile Include="..\..\src\F3DEX2CBFD.cpp" />
-    <ClCompile Include="..\..\src\F3DEX2MM.cpp" />
-    <ClCompile Include="..\..\src\F3DFLX2.cpp" />
-    <ClCompile Include="..\..\src\F3DGOLDEN.cpp" />
-    <ClCompile Include="..\..\src\F3DSETA.cpp" />
-    <ClCompile Include="..\..\src\F3DBETA.cpp" />
-    <ClCompile Include="..\..\src\F3DSWRS.cpp" />
-    <ClCompile Include="..\..\src\F3DTEXA.cpp" />
     <ClCompile Include="..\..\src\FrameBuffer.cpp" />
     <ClCompile Include="..\..\src\FrameBufferInfo.cpp" />
     <ClCompile Include="..\..\src\GBI.cpp" />
@@ -365,23 +355,34 @@
     <ClCompile Include="..\..\src\RSP.cpp" />
     <ClCompile Include="..\..\src\RSP_LoadMatrixX86.cpp" />
     <ClCompile Include="..\..\src\SoftwareRender.cpp" />
-    <ClCompile Include="..\..\src\T3DUX.cpp" />
     <ClCompile Include="..\..\src\TexrectDrawer.cpp" />
     <ClCompile Include="..\..\src\TextDrawer.cpp" />
     <ClCompile Include="..\..\src\TextureFilterHandler.cpp" />
     <ClCompile Include="..\..\src\Textures.cpp" />
-    <ClCompile Include="..\..\src\Turbo3D.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3D.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DAM.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DBETA.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DDKR.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DEX.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DEX2.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DEX2ACCLAIM.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DEX2CBFD.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DEX2MM.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DFLX2.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DGOLDEN.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DPD.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DSETA.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DSWRS.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DTEXA.cpp" />
+    <ClCompile Include="..\..\src\uCodes\L3D.cpp" />
+    <ClCompile Include="..\..\src\uCodes\L3DEX.cpp" />
+    <ClCompile Include="..\..\src\uCodes\L3DEX2.cpp" />
+    <ClCompile Include="..\..\src\uCodes\S2DEX.cpp" />
+    <ClCompile Include="..\..\src\uCodes\S2DEX2.cpp" />
+    <ClCompile Include="..\..\src\uCodes\T3DUX.cpp" />
+    <ClCompile Include="..\..\src\uCodes\Turbo3D.cpp" />
+    <ClCompile Include="..\..\src\uCodes\ZSort.cpp" />
     <ClCompile Include="..\..\src\VI.cpp" />
-    <ClCompile Include="..\..\src\F3D.cpp" />
-    <ClCompile Include="..\..\src\F3DDKR.cpp" />
-    <ClCompile Include="..\..\src\F3DEX.cpp" />
-    <ClCompile Include="..\..\src\F3DEX2.cpp" />
-    <ClCompile Include="..\..\src\F3DPD.cpp" />
-    <ClCompile Include="..\..\src\L3D.cpp" />
-    <ClCompile Include="..\..\src\L3DEX.cpp" />
-    <ClCompile Include="..\..\src\L3DEX2.cpp" />
-    <ClCompile Include="..\..\src\S2DEX.cpp" />
-    <ClCompile Include="..\..\src\S2DEX2.cpp" />
     <ClCompile Include="..\..\src\windows\CommonAPIImpl_windows.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_mupenplus|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_mupenplus_uniformset|Win32'">true</ExcludedFromBuild>
@@ -409,7 +410,6 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release_mupenplus|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="..\..\src\ZlutTexture.cpp" />
-    <ClCompile Include="..\..\src\ZSort.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\3DMath.h" />
@@ -429,15 +429,6 @@
     <ClInclude Include="..\..\src\DepthBufferRender\ClipPolygon.h" />
     <ClInclude Include="..\..\src\DepthBufferRender\DepthBufferRender.h" />
     <ClInclude Include="..\..\src\DisplayWindow.h" />
-    <ClInclude Include="..\..\src\F3DAM.h" />
-    <ClInclude Include="..\..\src\F3DEX2ACCLAIM.h" />
-    <ClInclude Include="..\..\src\F3DEX2CBFD.h" />
-    <ClInclude Include="..\..\src\F3DEX2MM.h" />
-    <ClInclude Include="..\..\src\F3DFLX2.h" />
-    <ClInclude Include="..\..\src\F3DGOLDEN.h" />
-    <ClInclude Include="..\..\src\F3DSETA.h" />
-    <ClInclude Include="..\..\src\F3DSWRS.h" />
-    <ClInclude Include="..\..\src\F3DTEXA.h" />
     <ClInclude Include="..\..\src\FrameBuffer.h" />
     <ClInclude Include="..\..\src\FrameBufferInfo.h" />
     <ClInclude Include="..\..\src\FrameBufferInfoAPI.h" />
@@ -496,25 +487,35 @@
     <ClInclude Include="..\..\src\GraphicsDrawer.h" />
     <ClInclude Include="..\..\src\RSP.h" />
     <ClInclude Include="..\..\src\SoftwareRender.h" />
-    <ClInclude Include="..\..\src\T3DUX.h" />
     <ClInclude Include="..\..\src\TexrectDrawer.h" />
     <ClInclude Include="..\..\src\TextDrawer.h" />
     <ClInclude Include="..\..\src\TextureFilterHandler.h" />
     <ClInclude Include="..\..\src\Textures.h" />
-    <ClInclude Include="..\..\src\Turbo3D.h" />
     <ClInclude Include="..\..\src\Types.h" />
+    <ClInclude Include="..\..\src\uCodes\F3D.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DAM.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DBETA.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DDKR.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DEX.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DEX2.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DEX2ACCLAIM.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DEX2CBFD.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DEX2MM.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DFLX2.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DGOLDEN.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DPD.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DSETA.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DSWRS.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DTEXA.h" />
+    <ClInclude Include="..\..\src\uCodes\L3D.h" />
+    <ClInclude Include="..\..\src\uCodes\L3DEX.h" />
+    <ClInclude Include="..\..\src\uCodes\L3DEX2.h" />
+    <ClInclude Include="..\..\src\uCodes\S2DEX.h" />
+    <ClInclude Include="..\..\src\uCodes\S2DEX2.h" />
+    <ClInclude Include="..\..\src\uCodes\T3DUX.h" />
+    <ClInclude Include="..\..\src\uCodes\Turbo3D.h" />
+    <ClInclude Include="..\..\src\uCodes\ZSort.h" />
     <ClInclude Include="..\..\src\VI.h" />
-    <ClInclude Include="..\..\src\F3D.h" />
-    <ClInclude Include="..\..\src\F3DDKR.h" />
-    <ClInclude Include="..\..\src\F3DEX.h" />
-    <ClInclude Include="..\..\src\F3DEX2.h" />
-    <ClInclude Include="..\..\src\F3DPD.h" />
-    <ClInclude Include="..\..\src\F3DBETA.h" />
-    <ClInclude Include="..\..\src\L3D.h" />
-    <ClInclude Include="..\..\src\L3DEX.h" />
-    <ClInclude Include="..\..\src\L3DEX2.h" />
-    <ClInclude Include="..\..\src\S2DEX.h" />
-    <ClInclude Include="..\..\src\S2DEX2.h" />
     <ClInclude Include="..\..\src\windows\GLideN64_windows.h" />
     <ClInclude Include="..\..\src\wst.h" />
     <ClInclude Include="..\..\src\xxHash\xxhash.h" />
@@ -524,7 +525,6 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release_mupenplus|Win32'">true</ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="..\..\src\ZlutTexture.h" />
-    <ClInclude Include="..\..\src\ZSort.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
