--- a/projects/msvc12/GLideN64.vcxproj
+++ b/projects/msvc12/GLideN64.vcxproj
@@ -367,7 +367,7 @@
     <ClCompile Include="..\..\src\uCodes\F3DEX2.cpp" />
     <ClCompile Include="..\..\src\uCodes\F3DEX2ACCLAIM.cpp" />
     <ClCompile Include="..\..\src\uCodes\F3DEX2CBFD.cpp" />
-    <ClCompile Include="..\..\src\uCodes\F3DEX2MM.cpp" />
+    <ClCompile Include="..\..\src\uCodes\F3DZEX2.cpp" />
     <ClCompile Include="..\..\src\uCodes\F3DFLX2.cpp" />
     <ClCompile Include="..\..\src\uCodes\F3DGOLDEN.cpp" />
     <ClCompile Include="..\..\src\uCodes\F3DPD.cpp" />
@@ -500,7 +500,7 @@
     <ClInclude Include="..\..\src\uCodes\F3DEX2.h" />
     <ClInclude Include="..\..\src\uCodes\F3DEX2ACCLAIM.h" />
     <ClInclude Include="..\..\src\uCodes\F3DEX2CBFD.h" />
-    <ClInclude Include="..\..\src\uCodes\F3DEX2MM.h" />
+    <ClInclude Include="..\..\src\uCodes\F3DZEX2.h" />
     <ClInclude Include="..\..\src\uCodes\F3DFLX2.h" />
     <ClInclude Include="..\..\src\uCodes\F3DGOLDEN.h" />
     <ClInclude Include="..\..\src\uCodes\F3DPD.h" />
