Enable force correctTexrectCoords for Tetrisphere in custom ini.
Fixed #1598 Tetrisphere lines between textures

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -120,6 +120,10 @@ Good_Name=Star Twins (J)
 frameBufferEmulation\copyFromRDRAM=1
 frameBufferEmulation\copyToRDRAM=0
 
+[TETRISPHERE]
+Good Name=Tetrisphere (U)
+generalEmulation\correctTexrectCoords=2
+
 [TIGGER%27S%20HONEY%20HUNT]
 Good_Name=Tigger's Honey Hunt (E)(U)
 frameBufferEmulation\N64DepthCompare=1
