--- a/projects/msvc12/libGLideNHQ.vcxproj
+++ b/projects/msvc12/libGLideNHQ.vcxproj
@@ -144,7 +144,7 @@
       <AdditionalDependencies>libpngd.lib;zlibd.lib</AdditionalDependencies>
     </Lib>
     <Lib>
-      <AdditionalLibraryDirectories>../../src/GLideNHQ/lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>lib/dbg</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_mupenplus_uniformset|Win32'">
@@ -216,7 +216,7 @@
     </Midl>
     <Lib>
       <AdditionalDependencies>libpng.lib;zlib.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>../../src/GLideNHQ/lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>lib/rel</AdditionalLibraryDirectories>
     </Lib>
     <Link>
       <AdditionalLibraryDirectories>%BOOST_ROOT%/lib32-msvc-12.0;../lib</AdditionalLibraryDirectories>
